# boids

./: CMakeLists.txt
include/: feature.h
src/: feature.cpp  sfml_test.cpp
test/: unit_tests.cc
