cmake_minimum_required(VERSION 3.14)
project(boids)

# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 20)

# define paths
set(SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(TEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/test)

#include testfiles
FILE (GLOB UNIT_TESTS "test/*.c*")

include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(
  unit_tests
  test/unit_tests.cc
  ${UNIT_TESTS}
)
target_link_libraries(
  unit_tests
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(unit_tests)